@@ -318,11 +318,13 @@ public:
   ::DDS::ReturnCode_t read_generic(
     OpenDDS::DCPS::DataReaderImpl::GenericBundle& gen,
     ::DDS::SampleStateMask sample_states, ::DDS::ViewStateMask view_states,
-    ::DDS::InstanceStateMask instance_states);
+    ::DDS::InstanceStateMask instance_states,
+    bool adjust_ref_count=false);
 
   ::DDS::ReturnCode_t take_generic(
     ::DDS::SampleStateMask sample_states, ::DDS::ViewStateMask view_states,
-    ::DDS::InstanceStateMask instance_states);
+    ::DDS::InstanceStateMask instance_states,
+    bool adjust_ref_count=false);
 
   ::DDS::InstanceHandle_t lookup_instance_generic(const void* data);
 
